--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,5 @@
-.title {
- color: violet;
- font-size: 40px;
- font-family: 'Lobster', cursive;
+body {
+    background: indianred;
+    font-family: 'Lobster', cursive;
 }
 
-.text {
-color: blue;
-font-size: 20px;
-}
