--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,1 @@
-body {
-    background: indianred;
-    font-family: 'Lobster', cursive;
-    background: rgb(255,11,11);
-background: linear-gradient(90deg, rgba(255,11,11,1) 0%, rgba(254,247,10,1) 25%, rgba(255,149,0,1) 43%, rgba(0,255,16,1) 56%, rgba(0,22,255,1) 76%, rgba(124,0,255,1) 90%);
-}
-
+ABOBA
