--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,8 @@
-.container {
-	border-width: 2px;
-	border-style: solid;
-	border-color: black;
-	text-align: center;
+.bebra {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
 
 }
 
-.card {
-	border-width: 2px;
-	border-style: solid;
-	border-color: black;
-	margin: auto;
-	width: 100px;
-	display: inline-block;
-
-}
