--- a/grind.css
+++ b/grind.css
@@ -1,7 +1,9 @@
 .blocky {
-	background: yellow;
-	border-width: 5px;
-	border-style: solid;
-	border-color: yellow;
-	border-width: 10px;
+display: flex;
+justify-content:center;
+
+
+}
+iframe {
+	flex-shrink: 0;
 }
