--- a/styles-of-beyond.css
+++ b/styles-of-beyond.css
@@ -1,21 +1,15 @@
 body {
-	background: #FFD9D9;
+	background: #C2D4E4;
 }
 
-.title-text {
-	display: flex;
-	justify-content: center;
-	color: blue;
-	font-size: 30px;
-	padding: 50px;
-}
-
-.center-text {
-	color: #153A54;
-	font-size: 30px;
-	justify-content: center;
-	padding: 100px;
+.upper-block {
 	margin: auto;
-	
+	background: #ECECEC;
+	height: 370px;
+	border-radius: 0px 0px 33px 33px;
+}
 
+.the-line {
+	border: solid black 1px;
+    position: absolute;
 }
