--- a/grind.css
+++ b/grind.css
@@ -1,40 +1,17 @@
-.container {
-	border: solid black 1px;
-	width: 650px;
-	height: 650px;
-	display: inline-block;
-	margin: 150px;
+div {
+ width: 100px;
+  height: 100px;
+  background-color: red;
+  animation-name: aboba;
+  animation-duration:1s; 
+  animation-iteration-count: infinite;
 }
 
-.red {
-	border: solid black 1px;
-	background: red;
-	width: 100px;
-	height: 100px;
-	position: relative;
-	top: 50%;
-    left: 50%;
-	transform: translate(-50%, -50%);
+@keyframes aboba {
 
+  0%  {background-color: blue;}
+  25%  {background-color: azure;}
+  50%  {background-color: purple;}
+  100% {background-color: green;}
 
-}
-
-.blue {
-    border: solid black 1px;
-	background: blue;
-	width: 100px;
-	height: 100px;
-	position: relative;
-	top: 50px;
-	right: 100px;
-}
-
-.green {
-	border: solid black 1px;
-	background: green;
-	width: 100px;
-	height: 100px;
-	position: absolute;
-	bottom: 66%;
-    left: 37%;
 }
