--- a/styles-of-beyond.css
+++ b/styles-of-beyond.css
@@ -1,15 +1,64 @@
 body {
-	background: #C2D4E4;
+	background: #D1D8E0;
 }
 
 .upper-block {
-	margin: auto;
 	background: #ECECEC;
-	height: 370px;
+	border: solid black 1px;
+	width: 1119px;
+    height: 425px;
 	border-radius: 0px 0px 33px 33px;
+	margin: auto;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.the-line {
-	border: solid black 1px;
-    position: absolute;
+.content-sec {
+	margin: auto;
+	width: 1119px;
+    height: 1099px;
+    background:#C2D4E4;
+    border: solid black 1px;
+    position: relative;
+    bottom: 120px;
+    z-index: -1;
+}
+
+
+.title {
+	position: relative;
+    font-family: 'Jost', sans-serif;
+    font-size: 45px;
+    line-height: 20px;
+    left: 100px;
+    top: 70px;
+
+}
+
+
+
+.join-button {
+	background: #0019F5;
+    border-radius: 7px;
+    border: solid black 1px;
+    width: 352px;
+    height: 46px;
+    position: relative;
+    left: 400px;
+    top: 200px;
+}
+
+.button-font {
+	position: relative;
+	left: 130px;
+	bottom: 5px;
+	font-family:'Roboto';
+	color: white;
+	font-size: 18px;
+}
+
+img {
+	position: relative;
+    left: 769px;
+    bottom: 83px;
+    width: 350px;
 }
