--- a/stylesofproject.css
+++ b/stylesofproject.css
@@ -14,11 +14,32 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.options {
-   position: absolute;
-   top: -38px ;
-   left: 50px;
+.logotype {
+  position: absolute;
+width: 476px;
+height: 123px;
+top: -55px;
+left: 18px;
+
+font-family: 'Jost';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 52px;
+
+color: #000000;
+
 
 }
 
+.another-line {
+   position: absolute;
+   width: 64px;
+   height: 0px;
+   top: -34px;
+   left: 1715px;
+
+ border: 1px solid #000000;
+ transform: rotate(-90deg); 
+}
 
