--- a/stylesofproject.css
+++ b/stylesofproject.css
@@ -5,22 +5,20 @@ body {
 
 
 .the-main-line {
-	position: absolute;
-	top: 60px ;	
-    width: 1921px;
-    left: 0px;
-    height: 0px;
-    border: 1px solid #000000;
+	
+	display: flex;
+   align-items: center;
+   justify-content: space-between;
+    border: 2px solid #000000;2
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.logotype {
-  position: absolute;
-width: 476px;
-height: 123px;
-top: -55px;
-left: 18px;
+.logout {
+   border-left: 1px solid black;
+   padding: 10px;
+}
 
+.logotype {
 font-family: 'Jost';
 font-style: normal;
 font-weight: 400;
@@ -32,14 +30,19 @@ color: #000000;
 
 }
 
-.another-line {
-   position: absolute;
-   width: 64px;
-   height: 0px;
-   top: -34px;
-   left: 1715px;
 
- border: 1px solid #000000;
- transform: rotate(-90deg); 
+
+.the-goddamn-text {
+   
 }
 
+.options {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+ font-family: 'Jost';
+ font-style: normal;
+ gap: 40px;
+
+
+}
