--- a/stylesofproject.css
+++ b/stylesofproject.css
@@ -9,21 +9,27 @@ body {
 	display: flex;
    align-items: center;
    justify-content: space-between;
-    border: 2px solid #000000;2
+    border: 2px solid #000000; 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+   
 }
 
 .logout {
    border-left: 1px solid black;
    padding: 10px;
+   font-family: 'Jost';
+   font-style: normal;
 }
 
 .logotype {
+display: flex;
 font-family: 'Jost';
 font-style: normal;
 font-weight: 400;
 font-size: 36px;
 line-height: 52px;
+left: 10px;
+
 
 color: #000000;
 
@@ -32,17 +38,35 @@ color: #000000;
 
 
 
-.the-goddamn-text {
-   
-}
 
 .options {
   display: flex;
   position: relative;
   justify-content: space-between;
- font-family: 'Jost';
- font-style: normal;
- gap: 40px;
+  font-family: 'Jost';
+  font-style: normal;
+  gap: 100px;
+  
+  
 
 
+}
+
+.ads-blocks {
+    display: flex;
+    position: relative;
+    border: solid black 1px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 100px;
+    margin-left: 10px;
+    width: 310px;
+    height: 744px;
+    background: #F4F4F4;
+
+}
+
+.ads-text {
+    font-family: 'Jost';
+    font-style: normal;
+    
 }
