--- a/stylesofproject.css
+++ b/stylesofproject.css
@@ -54,13 +54,14 @@ color: #000000;
 
 .ads-blocks {
     display: flex;
+    flex-direction: column;
     position: relative;
     border: solid black 1px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-top: 100px;
     margin-left: 10px;
     width: 310px;
-    height: 744px;
+    height: 410px;
     background: #F4F4F4;
 
 }
@@ -68,5 +69,12 @@ color: #000000;
 .ads-text {
     font-family: 'Jost';
     font-style: normal;
+    padding: 20px;
+    gap: 10px;
+    
+}
+
+
+.trends {
     
 }
