--- a/stylesofproject.css
+++ b/stylesofproject.css
@@ -76,5 +76,14 @@ color: #000000;
 
 
 .trends {
-    
+    display: flex;
+    flex-direction: column;
+    border: solid black 1px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 100px;
+    left: 10px;
+    width: 310px;
+    height: 410px;
+    background: #F4F4F4;
 }
+
