--- a/stylesofproject.css
+++ b/stylesofproject.css
@@ -56,12 +56,12 @@ color: #000000;
     display: flex;
     flex-direction: column;
     position: relative;
-    border: solid black 1px;
+    border: solid black 2px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-top: 100px;
     margin-left: 10px;
     width: 310px;
-    height: 410px;
+    height: 690px;
     background: #F4F4F4;
 
 }
@@ -80,10 +80,43 @@ color: #000000;
     flex-direction: column;
     border: solid black 1px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 100px;
-    left: 10px;
+    margin-top: -537px;
+    margin-left: 1562px;
     width: 310px;
     height: 410px;
     background: #F4F4F4;
 }
 
+.main-ads-text {
+    font-family: 'Jost';
+    font-size: large;
+    font-style: italic;
+    padding: 20px;
+    border: black solid 1px;
+    background-color: #D6E9FA;
+    gap: 10px;
+}
+
+.post-type-placeholder {
+    width: 552px;
+    height: 248px;
+    border: solid black 1px;
+    margin-top: -557px;
+    margin-left: 659px;
+    background-color: #F4F4F4;
+}
+
+.post-itself {
+
+}
+
+
+.add-post {
+    margin-top: 80px;
+    margin-left: 231px;
+    color: blue;
+}
+
+input {
+margin-top: 1px;
+}
